# OpenJudge

./: .env.example  .gitignore  README.md  Taskfile.yml  ai.md  demo.md  libs.md  refs.md  zap_9104_report.html
.github/workflows/: README.md  ci.yml  main.yaml
core/: README.md
core/schema/: README.md
example_ci_cd/: example_backend_tf  example_workflows_main.yaml
frontend/: .env.local
infrastructure/: README.md
infrastructure/docker/: Dockerfile.application  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.java  Dockerfile.problems  README.md  (+5 more)
model/: Alt-Architecture-1-Container.dsl  Alt-Architecture-1-Deployment.dsl  Alt-Architecture-2-Container.dsl  ChosenArchitecture-Deployment.dsl  ChosenArchitecture-container.dsl  InitialArchitecture.dsl  README.md  alt-architecture-1-container.dsl  alt-architecture-1-deployment.dsl  architecture.dsl  container.dsl  context.dsl  deployment.dsl  proposal.md
report/: report.md
services/: README.md  SwaggerHowTo.md
services/gateway/: README.md  config.py  forward.py  main.py  middleware.py  pyproject.toml  tests.py
services/problems/: Dockerfile.Problems  README.md  __init__.py  docker-compose.yml  launch.sh  main.py  problems.json  pyproject.toml
services/problems/models/: __init__.py  crud.py  database.py  dbmodels.py  initdb.py
services/problems/routes/: healthroute.py  problemroute.py
services/problems/src/application/: __init__.py  main.py
services/problems/src/models/: crud.py  database.py  dbmodels.py  initdb.py  schemas.py
services/problems/src/routes/: healthroute.py  problemroute.py
services/submission/: README.md  ai.py  app.py  config.py  docker-compose.yml  dockerfile  feedback.py  init.sql  main.py  main.tf  models.py  pyproject.toml  q.py  queue_utils.py  requirements.txt  variables.tf
services/submission/app/: __init__.py  app.py  config.py  main.py  models.py  queue.py  queue_utils.py  worker.py
services/submission/app/config/: __init__.py
services/submission/app/handlers/: handlers.py
services/submission/app/models/: models.py
services/submission/app/utils/: validation.py
services/submission/app/views/: routes.py
services/submission/subscriber/: config.py  subscriber.py
tests/: .env.test  README.md  conftest.py  pyproject.toml  snyk.md
(+185 files in other folders)
