[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.2",
    "httpx>=0.28.0",
    "flake8>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "flake8>=6.0.0",
]
