[project]
name = "problems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]
