[project]
name = "submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn==22.0.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "requests>=2.32.3",
]
